# myfast

./: .gitignore  README.md  pyproject.toml
myfast/: main.py
